# leaguespy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/leaguespy/: __main__.py  player_stats.py  player_task_info.py
